--- a/css/style.css
+++ b/css/style.css
@@ -27,14 +27,19 @@
 }
 #containermain{
     display: flex;
-    flex-wrap: wrap;
+  
     padding: 30px;
 }
 .card{
-    width: calc(100% / 10);
+    width: calc(100% / 5);
     height: 100px;
     border: 1px solid black;
     border-radius: 20px;
     margin-right: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
     
 }
