--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@
     padding: 30px;
 }
 .card{
-    width: calc(100% / 5);
+    width: 150px;
     height: 100px;
     border: 1px solid black;
     border-radius: 20px;
@@ -41,5 +41,9 @@
     align-items: center;
     justify-content: center;
     font-size: 30px;
-    
+}
+#containericon{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
